🐛 Fix spacing for empty state

--- a/src/app/(app)/connections/layout.module.scss
+++ b/src/app/(app)/connections/layout.module.scss
@@ -2,10 +2,10 @@
 @use "../../../styles/tools" as *;
 
 .main {
-  @include flex-shorthand(column, nowrap);
+  @include flex-shorthand(column, nowrap, $whitespace-7);
 
   block-size: calc(100dvb - 7.3rem);
-  padding: 0 $whitespace-6 $whitespace-7;
+  padding: $whitespace-7 $whitespace-6;
   overflow: auto;
   scrollbar-gutter: auto;
   overscroll-behavior: auto;
