--- a/src/app/(app)/messages/page.module.scss
+++ b/src/app/(app)/messages/page.module.scss
@@ -2,7 +2,7 @@
 @use "../../../styles/tools" as *;
 
 .page-content {
-  @include flex-shorthand(column, nowrap);
+  @include flex-shorthand(column, nowrap, $whitespace-7);
 
   block-size: 100%;
   padding: $whitespace-7 $whitespace-6;
