--- a/src/components/ActiveChats/ActiveChats.module.scss
+++ b/src/components/ActiveChats/ActiveChats.module.scss
@@ -6,7 +6,6 @@
 
   inline-size: 100%;
   max-inline-size: 35rem;
-  padding-block-start: $whitespace-7;
   margin: 0 auto;
 
   &--sidebar {
