--- a/src/components/NotificationList/NotificationList.module.scss
+++ b/src/components/NotificationList/NotificationList.module.scss
@@ -8,7 +8,6 @@
   flex: 1;
   inline-size: 100%;
   max-inline-size: 90rem;
-  padding-block-start: $whitespace-8;
   margin: 0 auto;
   background-color: $color-neutral-1;
 }
