--- a/src/components/Tabs/Tabs.module.scss
+++ b/src/components/Tabs/Tabs.module.scss
@@ -6,6 +6,5 @@
 
   inline-size: 100%;
   max-inline-size: 40rem;
-  padding: $whitespace-7 0;
   margin: 0 auto;
 }
